@@ -25,6 +25,7 @@
 - Fixed error in api2.php file that caused newly created users' passwords to be encoded twice 
 - Fixed error in activation email code sent out when new users are registering and "email activation" is set
 - If certificate template file is missing, the system reverts to the default
+- Fixed archived users appearing in group's users list
 
 === Version 3.6.5 build 8086 ===
 - Fixed some course settings not being available to professors
